# shape_based_matching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fusion.h  line2Dup.cpp  line2Dup.h  pybind11.cpp  setup.py  test.cpp  test.py  test_fusion.cpp
MIPP/: mipp.h  mipp_impl_AVX.hxx  mipp_impl_AVX512.hxx  mipp_impl_NEON.hxx  mipp_impl_SSE.hxx  mipp_object.hxx  mipp_scalar_op.h  mipp_scalar_op.hxx
MIPP/math/: avx512_mathfun.h  avx512_mathfun.hxx  avx_mathfun.h  avx_mathfun.hxx  neon_mathfun.h  neon_mathfun.hxx  sse_mathfun.h  sse_mathfun.hxx
cuda_icp/: CMakeLists.txt  geometry.h  icp.cpp  icp.cu  icp.h
cuda_icp/scene/: common.cpp  common.cu  common.h
cuda_icp/scene/edge_scene/: edge_scene.cpp  edge_scene.cu  edge_scene.h
cuda_icp/scene/kdtree_scene/: kdtree_scene.cpp  kdtree_scene.cu  kdtree_scene.h
np2mat/: ndarray_converter.cpp
pybind11/: pybind11.cpp
pybind11/Cmake/: FindNumPy.cmake
test/: circle_info.yaml
test/case0/: circle_info.yaml  circle_templ.yaml  info.yaml
test/case1/: test_info.yaml  test_templ.yaml
test/case1/127/: 06_template.yaml
test/case1/600/: 06_info.yaml  06_template.yaml
test/case1/63/: 06_info.yaml  06_template.yaml
test/case1/800_1000/: 06_info.yaml
test/case1/allScales/: 06_info.yaml
test/case1/writeClasses/: 06_template.yaml
test/case2/: test_info.yaml  test_templ.yaml
test/ori_16bit_experiment/: LUT16.txt  LUT_gen.cpp  line2Dup_16bit_ori.cpp
